# friction

./: .gitignore  Cargo.toml
corpus/: FINGERPRINT.md  (+8 more)
crates/corpus-tool/: Cargo.toml  README.md
crates/corpus-tool/examples/: self_fingerprint.rs
crates/corpus-tool/src/: cli.rs  corpus_layout.rs  genconfig.rs  hashing.rs  lib.rs  main.rs  manifest.rs  metric_source.rs  ollama.rs  prompts.rs
crates/corpus-tool/src/commands/: clean.rs  envelope.rs  fix_entities.rs  generate.rs  holdout_check.rs  ingest.rs  mine.rs  mod.rs  remove.rs  seal.rs  separate.rs  separate_holdout.rs  split.rs  stats.rs  validate.rs
crates/corpus-tool/tests/: clean.rs  envelope.rs  generate.rs  holdout_check.rs  ingest.rs  mining_report.rs  prompt_corpus.rs  seal.rs  separate.rs  split.rs  stats.rs  validate.rs
crates/corpus-tool/tests/common/: mod.rs
crates/corpus-tool/tests/fixtures/valid_corpus/: manifest.jsonl
crates/friction-apply/: Cargo.toml
crates/friction-apply/examples/: llm_effectiveness_preview.rs  near_noop_report.rs  throughput_bench.rs
crates/friction-apply/src/: conflict.rs  coverage.rs  driver.rs  fix.rs  lib.rs
crates/friction-apply/tests/: contraction_convergence.rs  idempotence_sweep.rs  property.rs
crates/friction-cli/: Cargo.toml
crates/friction-cli/src/: check.rs  common.rs  diagnostics.rs  explain.rs  fix.rs  lib.rs  main.rs  sarif.rs  scan.rs  setup.rs  table.rs
crates/friction-cli/tests/: cli.rs  sarif_schema.rs  snapshot.rs
crates/friction-cli/tests/snapshots/: snapshot__check_json__blog_human_016b54b46d29feb8.snap  snapshot__check_json__blog_human_0589bf2932eba95a.snap  snapshot__check_json__blog_llm_152f7fa1159f4910.snap  snapshot__check_json__blog_llm_19f12335d308d0e0.snap  snapshot__check_json__docs_human_01ec8967989205a2.snap  snapshot__check_json__docs_human_08d07d7b04ccd440.snap  snapshot__check_json__docs_llm_00533d2e3a398154.snap  snapshot__check_json__docs_llm_0a0197006e9ca159.snap  snapshot__check_json__email_human_0ac47db2525fd485.snap  snapshot__check_json__email_llm_062a9d6f268e8994.snap  snapshot__check_json__email_llm_29ff22ba7de18cf6.snap  snapshot__check_json__email_quarantine_026f8f57c3920652.snap  snapshot__check_json__forum_llm_0720879ca70251ed.snap  snapshot__check_json__forum_llm_137c3759df60fa49.snap  snapshot__check_json__forum_quarantine_0710f627ec229d97.snap  snapshot__check_json__forum_quarantine_0a3d4030ac673c91.snap  snapshot__check_json__readme_human_0217ca71eb7abfce.snap  snapshot__check_json__readme_human_05f0fbd8371252a5.snap  snapshot__check_json__readme_llm_04c4c78e378a7c8f.snap  snapshot__check_json__readme_llm_0859e6e20fb1cf84.snap  snapshot__check_text__blog_human_016b54b46d29feb8.snap  snapshot__check_text__blog_human_0589bf2932eba95a.snap  snapshot__check_text__blog_llm_152f7fa1159f4910.snap  snapshot__check_text__blog_llm_19f12335d308d0e0.snap  snapshot__check_text__docs_human_01ec8967989205a2.snap  snapshot__check_text__docs_human_08d07d7b04ccd440.snap  snapshot__check_text__docs_llm_00533d2e3a398154.snap  snapshot__check_text__docs_llm_0a0197006e9ca159.snap  snapshot__check_text__email_human_0ac47db2525fd485.snap  snapshot__check_text__email_llm_062a9d6f268e8994.snap  snapshot__check_text__email_llm_29ff22ba7de18cf6.snap  snapshot__check_text__email_quarantine_026f8f57c3920652.snap  snapshot__check_text__forum_llm_0720879ca70251ed.snap  snapshot__check_text__forum_llm_137c3759df60fa49.snap  snapshot__check_text__forum_quarantine_0710f627ec229d97.snap  snapshot__check_text__forum_quarantine_0a3d4030ac673c91.snap  snapshot__check_text__readme_human_0217ca71eb7abfce.snap  snapshot__check_text__readme_human_05f0fbd8371252a5.snap  snapshot__check_text__readme_llm_04c4c78e378a7c8f.snap  snapshot__check_text__readme_llm_0859e6e20fb1cf84.snap  (+40 more)
crates/friction-core/: Cargo.toml
crates/friction-core/src/: block.rs  document.rs  envelope.rs  error.rs  finding.rs  lib.rs  metrics.rs  patch.rs  rule.rs  span.rs
crates/friction-metrics/: Cargo.toml
crates/friction-metrics/src/: compute.rs  lexical.rs  lib.rs  rhythm.rs  signals.rs  symmetry.rs
crates/friction-nlp/: Cargo.toml  build.rs
crates/friction-nlp/data/: friction-en.srx
crates/friction-nlp/src/: dep.rs  dep_heuristic.rs  dep_onnx.rs  inflect.rs  lib.rs  segment.rs  segment_srx.rs  tag.rs  tag_nlprule.rs
crates/friction-nlp/tests/: corpus_determinism.rs  segment_golden.rs
crates/friction-nlp/tests/data/: segment_golden.toml
crates/friction-packs/: Cargo.toml
crates/friction-packs/packs/: envelope-v1.toml  envelope-v2.toml  mined-ngrams-v1.toml
crates/friction-packs/src/: artifact.rs  envelope.rs  lib.rs  registry.toml
crates/friction-parse/: Cargo.toml
crates/friction-parse/src/: error.rs  extract.rs  lib.rs
crates/friction-parse/tests/: roundtrip.rs
crates/friction-parse/tests/fixtures/: blockquotes.md  code_fences.md  crlf.md  html.md  links.md  nested_lists.md  tables.md  unicode.md
crates/friction-plan/: Cargo.toml
crates/friction-plan/src/: lib.rs  mapping.rs  plan.rs
crates/friction-plan/tests/: serialization.rs
crates/friction-rules/: Cargo.toml
crates/friction-rules/src/: budget.rs  context.rs  lib.rs  rule.rs  strategy.rs
crates/friction-rules/src/families/: connective.rs  contraction.rs  lexical.rs  mod.rs  rhythm.rs  structural.rs  symmetry.rs
crates/friction-rules/src/families/lexical/: filler.rs  substitution.rs
crates/friction-rules/src/families/rhythm/: fuse.rs  split.rs
crates/friction-rules/src/families/structural/: bold_label_strip.rs  header_merge.rs  unbullet.rs
crates/friction-rules/src/families/symmetry/: not_just_but.rs  participial_closer.rs  ritual_conclusion.rs  triad_reduction.rs
crates/friction-rules/tests/: connective_golden.rs  contraction_golden.rs  lexical_golden.rs  rhythm_golden.rs  structural_golden.rs  symmetry_golden.rs
crates/friction-rules/tests/golden/connective/: budget_stops_mid_document.after.md  budget_stops_mid_document.before.md  false_positive_guard.after.md  (+4 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_fix_document.rs  fuzz_parse.rs  fuzz_sarif_line_col.rs  support.rs
(+685 files in other folders)
