[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ngriaznov/friction"

[workspace.dependencies]
thiserror = "2"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
sha2 = "0.11"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
proptest = "1"
ureq = { version = "3", features = ["json"] }
walkdir = "2"
# Deterministic, non-cryptographic hashing used to seed the fix-strategy
# PRNG from (sentence bytes, rule id) — see `friction-rules::StrategyRng`.
xxhash-rust = { version = "0.8", features = ["xxh64"] }
# End-to-end CLI snapshot suite (friction-cli's tests/snapshot.rs): pins
# the full byte output of `check`/`fix`/`explain` over a fixed corpus
# selection to on-disk `.snap` files.
insta = "1"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Targeted allows: these pedantic/nursery lints fire on idiomatic code more
# often than they catch real issues in this codebase.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
