[package]
name = "corpus-tool"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
ureq.workspace = true
walkdir.workspace = true

[dev-dependencies]
# Not in workspace.dependencies; pinned here per crate-local convention for
# a dependency the workspace root doesn't otherwise need.
tempfile = "3"
