[package]
name = "friction-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "friction"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
friction-packs = { path = "../friction-packs" }
thiserror = { workspace = true }
ureq = { workspace = true }

# Resolves an XDG-compliant cache directory on Linux, with the platform
# equivalent on macOS/Windows. Not yet covered by [workspace.dependencies]
# (see the friction-nlp/friction-packs/friction-cli task brief) — added
# here rather than at the workspace root to avoid a concurrent root-file
# edit.
directories = "6"
