[package]
name = "friction-metrics"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
friction-core = { path = "../friction-core" }
friction-nlp = { path = "../friction-nlp" }
# Not yet in [workspace.dependencies]; added directly here (rather than at
# the workspace root) to avoid a concurrent root-file edit while sibling
# metric modules are being written in parallel. Already present in
# Cargo.lock as a transitive dependency (srx/nlprule), so this adds no new
# crate to the build.
regex = "1"
# Both already in `[workspace.dependencies]`: used only to parse the
# embedded `mined-ngrams-v1.toml` pack at process start (see
# src/signals.rs) into the curated llm-/human-favored phrase lists.
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
friction-parse = { path = "../friction-parse" }
