[package]
name = "friction-packs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Only for `Envelope`, the `[lo, hi]` band type `EnvelopePack::band`
# returns — this crate performs no parsing, NLP, or metric computation of
# its own.
friction-core = { path = "../friction-core" }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
