[package]
name = "friction-parse"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
friction-core = { path = "../friction-core" }
pulldown-cmark = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
