[package]
name = "friction-plan"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
friction-core = { path = "../friction-core", features = ["serde"] }
friction-rules = { path = "../friction-rules" }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
